--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^13.6.0",
     "node-fetch": "^3.3.2"
   }
 }
